--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,3 +2,12 @@
 .your-carousel-class .carousel-item {
   width: calc(100% / 3); /* Ajusta el ancho de cada elemento para mostrar 3 a la vez */
 }
+.cart-sidebar {
+  transition: transform 0.3s ease-in-out;
+}
+.cart-sidebar.open {
+  transform: translateX(0);
+}
+.cart-sidebar.closed {
+  transform: translateX(100%);
+}
